# SPART

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_and_pytest.yml  python-publish.yml  test.yml  test_and_publish.yml
src/SPART/: __init__.py  evaluator.py  external_llm_connector.py  llm_connector.py  local_llm_connector.py  optimizer.py  recommender.py
src/spart/: optimizer.py  recommender.py
src/spartTemp/: external_llm_connector.py  local_llm_connector.py  recommender.py
src/spart_prompt/: __init__.py  optimizer.py  recommender.py
tests/: NER.py  conftest.py  test.py  test_LLM.py  test_evaluator.py  test_external_llm_connector.py  test_integration.py  test_llm_connector.py  test_local_llm_connector.py  test_optimal_num_examples.py  test_optimal_num_examples_semantic.py  test_optimal_num_examples_syntax.py  test_optimizer.py  test_prompt_semantic_recommendation_optimization.py  test_prompt_syntactic_recommendation_optimization.py  test_recommender.py  test_semantic.py  test_syntax.py  test_syntax_OA.py
tests/test_results/: NUM_EXM.json  OPTIMIZE_SYNTAX.json  RECOMMEND_SYNTACTIC.json  final_syntax_optimisation_results_20250320_124027.json  final_syntax_optimisation_results_20250320_125647.json  final_syntax_optimisation_results_20250320_132428.json  final_syntax_recommend_results_20250320_124557.json  final_syntax_recommend_results_20250320_133058.json  optimal_examples_results_20250320_012108.json  optimisation_results_20250212_162645.json  optimisation_results_20250218_164804.json  optimisation_results_20250218_165013.json  optimisation_results_20250219_164324.json  (+175 more)
